--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,19 +22,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="<%= root_url == request.original_url ? "nav-item active" : "nav-item" %>">
               <%= link_to t("home"), root_path, class: "nav-link" %>
             </li>
             <% if user_signed_in? %>
               <%= link_to t('logout'), destroy_user_session_path, method: :delete, :class => 'nav-link'  %>
             <% else %>
-              <li class="nav-item">
+              <li class="<%= request.original_url.split('/').last == "sign_up" ? "nav-item active" : "nav-item" %>">
                 <%= link_to t('signup'), new_user_registration_path, :class => 'nav-link' %>
               </li>
-              <li class="nav-item">
+              <li class="<%= request.original_url.split('/').last == "sign_in" ? "nav-item active" : "nav-item" %>">
                 <%= link_to t('login'), new_user_session_path, :class => 'nav-link' %>
               </li>
-
             <% end %>
           </ul>
         </div>
