--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -55,11 +55,10 @@
           <p><%= t('rating') + ": " + @product.rates.average("rating").to_s + " (" + @product.rates.count().to_s + ")"   %></p>
           <%= form_for([@product,@product.rates.build]) do |f| %>
             <p>
-              <%= f.label :rating %>
               <%= f.select(:rating, options_for_select([[1,1],[2,2],[3,3],[4,4],[5,5]],3), class: "form-control")%>
             </p>
             <p>
-              <%= f.submit(class: "btn btn-primary") %>
+              <%= f.submit(t('rate'), class: "btn btn-primary") %>
             </p>
           <% end %>
 
@@ -70,7 +69,7 @@
 
       <div class="card card-outline-secondary my-4">
         <div class="card-header">
-          Product Reviews
+          <%= t('comments') %>
         </div>
         <div class="card-body">
           <% @product.comments.each do |comment| %>
@@ -81,13 +80,11 @@
           <% if user_signed_in? %>
             <h3> <%= t('comment') %></h3>
             <%= form_for([@product,@product.comments.build]) do |f| %>
-              <%= @product.comments.as_json %>
               <p>
-              <%= f.label :body %>
               <%= f.text_field(:body, class: 'form-control') %>
               </p>
               <p>
-                <%= f.submit(class: 'btn btn-primary') %>
+                <%= f.submit(t('send'),class: 'btn btn-primary') %>
               </p>
             <% end %>
           <% end %>
