wishlist added, authentication requires some routes added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,9 @@
               <li class="<%= orders_url == request.original_url ? "nav-item active" : "nav-item" %>">
                 <%= link_to t('orders'), orders_path,  :class => "nav-link"%>
               </li>
+              <li class="<%= wishlist_url == request.original_url ? "nav-item active" : "nav-item" %>">
+                <%= link_to t('wishlist'), wishlist_path,  :class => "nav-link"%>
+              </li>
               <%= link_to t('logout'), destroy_user_session_path, method: :delete, :class => 'nav-link'  %>
             <% else %>
               <li class="<%= request.original_url.split('/').last == "sign_up" ? "nav-item active" : "nav-item" %>">
